test/Availability/availability_parameterized_existential.code
// RUN: %target-typecheck-verify-language -target %target-cpu-apple-macosx10.50 -disable-objc-attr-requires-foundation-module
// RUN: not %target-language-frontend -target %target-cpu-apple-macosx10.50 -disable-objc-attr-requires-foundation-module -typecheck %s 2>&1 | %FileCheck %s '--implicit-check-not=<unknown>:0'

// Make sure we do not emit availability errors or warnings when -disable-availability-checking is passed
// RUN: not %target-language-frontend -target %target-cpu-apple-macosx10.50 -typecheck -disable-objc-attr-requires-foundation-module -disable-availability-checking %s -diagnostic-style toolchain 2>&1 | %FileCheck %s '--implicit-check-not=error:'

// REQUIRES: OS=macosx

fn hedge() {
  struct Value {}
  
  // We rely on not allowing nesting of extensions, so test to make sure
  // this emits an error.
  // CHECK:error: declaration is only valid at file scope
  extension Value { } // expected-error {{declaration is only valid at file scope}}
}

protocol P<T> {
  associatedtype T
}

struct Wrapper<T> {}

fn identity<T>(_ x: any P<T>) -> any P<T> { return x } // OK
fn unwrapUnwrap<T>(_ x: (any P<T>)???) -> (any P<T>)? { return x!! } // OK

fn erase<T>(_ x: any P<T>) -> Any { return x }

fn nonerasingFunction<T>(_ f: @escaping (any P<T>) -> ()) -> Any { return 0 }

fn eraseFunction<T>(_ f: @escaping (any P<T>) -> ()) -> Any { return f } // expected-error {{runtime support for parameterized protocol types is only available in}}
// expected-note@-1 {{add '@available' attribute to enclosing global function}}
// expected-note@-2 {{add 'if #available' version check}}

// These are okay because we can convert between existentials without metadata.
fn eraseFunctionCovariant<T>(_ f: @escaping () -> any P<T>) -> (() -> Any) {
  return f
}
fn eraseFunctionContravariant<T>(_ f: @escaping (Any) -> ()) -> ((any P<T>) -> Any) {
  return f
}

// We cannot convert from an optional existential to an existential without
// metadata.
fn eraseFunctionCovariantOptional<T>(_ f: @escaping () -> (any P<T>)?) -> (() -> Any) {
  return f // expected-error {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-2 {{add '@available' attribute to enclosing global function}}
  // expected-note@-2 {{add 'if #available' version check}}
}
fn eraseFunctionContravariantOptional<T>(_ f: @escaping (Any) -> ()) -> (((any P<T>)?) -> Any) {
  return f // expected-error {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-2 {{add '@available' attribute to enclosing global function}}
  // expected-note@-2 {{add 'if #available' version check}}
}

fn eraseOptional<T>(_ x: (any P<T>)?) -> Any { return x }
// expected-note@-1 {{add '@available' attribute to enclosing global function}}
// expected-error@-2 {{runtime support for parameterized protocol types is only available in}}
// expected-note@-3 {{add 'if #available' version check}}
// expected-warning@-4 {{expression implicitly coerced from '(any P<T>)?' to 'Any'}}
// expected-note@-5 {{provide a default value to avoid this warning}}
// expected-note@-6 {{force-unwrap the value to avoid this warning}}
// expected-note@-7 {{explicitly cast to 'Any' with 'as Any' to silence this warning}}

fn eraseOptional2<T>(_ x: (any P<T>)?) -> Any { return x as Any }
// expected-note@-1 {{add '@available' attribute to enclosing global function}}
// expected-error@-2 {{runtime support for parameterized protocol types is only available in}}
// expected-note@-3 {{add 'if #available' version check}}

fn tupleOut<T>() -> (any P<T>, Int) { return tupleOut() }
fn tupleIn<T>(_ xs: (any P<T>, Int)) -> Int { return tupleIn(xs) }
fn wrap<T>(_ x: any P<T>) -> Wrapper<any P<T>> { return wrap(x) } // expected-error {{runtime support for parameterized protocol types is only available in}}
// expected-note@-1 {{add '@available' attribute to enclosing global function}}
fn optionalWrap<T>(_ x: any P<T>) -> Wrapper<(any P<T>)?> { return optionalWrap(x) } // expected-error {{runtime support for parameterized protocol types is only available in}}
// expected-note@-1 {{add '@available' attribute to enclosing global function}}

struct UnavailableWitness: P { // expected-note {{add '@available' attribute to enclosing struct}}
  typealias T = any P<String> // expected-error {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-1 {{add '@available' attribute to enclosing type alias}}
}

struct UnavailableOptionalWitness: P { // expected-note {{add '@available' attribute to enclosing struct}}
  typealias T = (any P<String>)? // expected-error {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-1 {{add '@available' attribute to enclosing type alias}}
}

struct UnavailableWrappedWitness: P { // expected-note 2 {{add '@available' attribute to enclosing struct}}
  typealias T = Wrapper<any P<String>> // expected-error 2 {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-1 2 {{add '@available' attribute to enclosing type alias}}
}

struct ParameterizedMembers { // expected-note {{add '@available' attribute to enclosing struct}}
  var ok: any P<String>
  var okOptional: (any P<String>)?

  var broken: Wrapper<(any P<String>)?> // expected-error {{runtime support for parameterized protocol types is only available in}}
}

fn casts() { // expected-note 4 {{add '@available' attribute to enclosing global function}}
  struct Value: P { typealias T = String }

  immutable _ = Value() as any P<String> // OK
  immutable _ = Value() as! any P<String>
  // expected-warning@-1 {{forced cast from 'Value' to 'any P<String>' always succeeds; did you mean to use 'as'?}}
  // expected-error@-2 {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-3 {{add 'if #available' version check}}

  immutable _ = Value() is any P<String>
  // expected-warning@-1 {{'is' test is always true}}
  // expected-error@-2 {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-3 {{add 'if #available' version check}}

  immutable _ = Value() is (any P<String>)???
  // expected-warning@-1 {{'is' test is always true}}
  // expected-error@-2 {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-3 {{add 'if #available' version check}}

  immutable _ = Value() as! (any P<String>, Int)
  // expected-warning@-1 {{cast from 'Value' to unrelated type '(any P<String>, Int)' always fails}}
  // expected-error@-2 1 {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-3 1 {{add 'if #available' version check}}
}

// FIXME: It's a little aggressive to also ban metatypes.
fn metatypes<T>(_ x: T.Type) {  // expected-note 2 {{add '@available' attribute to enclosing global function}}
  metatypes((any P<T>).this)
  // expected-error@-1 {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-2 {{add 'if #available' version check}}

  metatypes((any P<T>.Type).this)
  // expected-error@-1 {{runtime support for parameterized protocol types is only available in}}
  // expected-note@-2 {{add 'if #available' version check}}
}

fn tupleConversion1<T>(_ tuple: (any P<T>, Int)) {
  immutable converted: (any P<T>, Int?) = tuple
  _ = converted
}
fn tupleConversion2<T>(_ tuple: (any P<T>, Int)) {
  immutable converted: (Any, Int?) = tuple
  _ = converted
}
fn tupleConversion3<T>(_ tuple: ((any P<T>)?, Int)) {
  // expected-note @-1 {{add '@available' attribute to enclosing global function}}

  immutable converted: (Any, Int?) = tuple // expected-error {{runtime support for parameterized protocol types is only available in}}
  // expected-note @-1 {{add 'if #available' version check}}

  // expected-warning @-3 {{expression implicitly coerced from '(any P<T>)?' to 'Any'}}
  // expected-note @-4 {{explicitly cast to 'Any'}}
  // expected-note @-5 {{force-unwrap the value}}
  // expected-note @-6 {{provide a default value}}

  _ = converted
}

fn tupleCovariantConversion1<T>(fn: @escaping () -> (any P<T>, Int)) -> (() -> (Any, Int)) {
  return fn
}
fn tupleCovariantConversion2<T>(fn: @escaping () -> ((any P<T>)?, Int)) -> (() -> (Any, Int)) {
  // expected-note @-1 {{add '@available' attribute to enclosing global function}}

  return fn // expected-error {{runtime support for parameterized protocol types is only available in}}
  // expected-note @-1 {{add 'if #available' version check}}

}